# image-scraping

./: .gitignore  README.md  main.py  pyproject.toml  setting.json
.devcontainer/: devcontainer.json
