[tool.poetry]
name = "work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "~2.28.2"
beautifulsoup4 = "~4.11.1"


[tool.poetry.group.dev.dependencies]
flake8 = "~6.0.0"
black = "~22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
